Lots of UI additions - and updated to latest SyncFusion versions.

--- a/DoddingtonCarnival.Blazor/Pages/DonationsPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/DonationsPage.razor
@@ -8,16 +8,46 @@
 
     <div class="overlay"></div>
     <div class="container">
-        <header>
+        @* <header>
             <h4 class="line-divider">Make a donation</h4>
             <h1>We're now able to accept<br />online donations!</h1>
-        </header>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-3">
+        <div class="container col-xxl-8 px-4 py-1">
 
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5 text-center">
-                <p class="headerTitle">Your support helps us to make the Doddington Village Sports and Carnival the very best that we can, for everybody to enjoy.</p>
+            <div class="row eventBanner">
+                <div class="title">
+                    Donations
+                </div>
+                <div class="">
+                    @* 23 September 2023 *@
+                </div>
+
             </div>
+
+            <div class="card eventCard">
+                <div class="card-body">
+                    <p class="eventHeading">Your donations</p>
+
+                    <p class=" bold-text">
+                        People have asked as to how our funds are spent, and we would like to make this as clear and open as possible.
+                    </p>
+                    <ul>
+                        <li><p><span class="bold-text" style="font-weight: bold;">100%</span> of the money raised by the Doddington Village Sports and Carnival Committee goes back into the next Carnival and Sports Day.</p></li>
+                        <li><p>The committee members are all <span class="" style="font-weight: bold;">volunteers</span>, and give up their own spare time to help make the next Carnival and Sports Day even more fantastic for the children.</p></li>
+                        <li><p>We heavily scrutinise each and every expense, such that only what <span class="" style="font-weight: bold;">has</span> to be bought by the Carnival, is paid for out of the funds. <span style="font-style: italic">(In fact, committee members frequently buy lots of the items used in/with the carnival themselves.)</span></p></li>
+                    </ul>
+                    <p class=" bold-text">
+                        We're proud of the Carnival and Sports Day, and want you to be sure that your donations are spent carefully.
+                    </p>
+
+                    <p class="">Your support helps us to make the Doddington Village Sports and Carnival the very best that we can, for everybody to enjoy.</p>
+                </div>
+            </div>
+
+
+
+
 
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-lg-6">
@@ -66,24 +96,7 @@
 
                 <hr />
 
-                <div class="row flex-lg-row-reverse align-items-center g-3 pppy-5">
-                    <div class="col-lg-12">
-                        <h1 class="display-5 fw-bold lh-1 mb-3">Your donations</h1>
-
-                        <p class="carnivalYellowText bold-text">
-                            People have asked as to how our funds are spent, and we would like to make this as clear and open as possible.
-                        </p>
-                        <ul>
-                            <li><p><span class="carnivalYellowText bold-text" style="font-weight: bold;">100%</span> of the money raised by the Doddington Village Sports and Carnival Committee goes back into the next Carnival and Sports Day.</p></li>
-                            <li><p>The committee members are all <span class="carnivalYellowText" style="font-weight: bold;">volunteers</span>, and give up their own spare time to help make the next Carnival and Sports Day even more fantastic for the children.</p></li>
-                            <li><p>We heavily scrutinise each and every expense, such that only what <span class="carnivalYellowText" style="font-weight: bold;">has</span> to be bought by the Carnival, is paid for out of the funds. <span style="font-style: italic">(In fact, committee members frequently buy lots of the items used in/with the carnival themselves.)</span></p></li>
-                        </ul>
-                        <p class="carnivalYellowText bold-text">
-                            We're proud of the Carnival and Sports Day, and want you to be sure that your donations are spent carefully.
-                        </p>
-
-                    </div>
-                </div>
+               
             </div>
         </div>
     </div>
