--- a/DoddingtonCarnival.Blazor/Pages/FeaturePrinceAndPrincess/PrinceAndPrincessPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeaturePrinceAndPrincess/PrinceAndPrincessPage.razor
@@ -13,12 +13,12 @@
     <div class="overlay"></div>
     <div class="container">
 
-        <header>
+@*         <header>
             <h4 class="line-divider">Prince & Princess</h4>
             <h1>Carnival Royalty</h1>
-        </header>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-1">
 
             <SfCarousel>
                 <CarouselItem>
@@ -52,6 +52,16 @@
                     </figure>
                 </CarouselItem>
             </SfCarousel>
+
+            <div class="row eventBanner">
+                <div class="title">
+                    Prince & Princess: Carnival Royalty
+                </div>
+                <div class="">
+                   @*  23 September 2023 *@
+                </div>
+
+            </div>
 
             <div class="card eventCard">
                 <div class="card-body">
