--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunRoutes/SantaRunRoutesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunRoutes/SantaRunRoutesPage.razor
@@ -9,12 +9,25 @@
 
     <div class="overlay"></div>
     <div class="container">
-        <header>
+      @*   <header>
             <h4 class="line-divider" style="color:white;" @onclick="NavigateToParent">Santa Run</h4>
             <h1>Routes</h1>
-        </header>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-1">
+
+            <div class="row"><img src="images/pages/santarun/2022Route.JPG" style="width: 100%" /></div>
+
+            <div class="row eventBanner">
+                <div class="title">
+                    Santa Run Routes
+                </div>
+                <div class="">
+                    8- 10 December 2023
+                </div>
+
+            </div>
+
 
             <div class="card eventCard">
                 <div class="card-header">
