--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -11,12 +11,12 @@
 <div class="carnivalpage pages paralax carnivalpage-darkblue">
     <div class="container">
 
-        <header>
+@*         <header>
             <h4 class="line-divider">Sports Afternoon</h4>
             <h1>Sports Afternoon</h1>
-        </header>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-1">
 
             <div class="control-container">
                 <SfCarousel>
@@ -53,6 +53,15 @@
                 </SfCarousel>
             </div>
 
+            <div class="row eventBanner">
+                <div class="title">
+                    Sports Afternoon
+                </div>
+                <div class="">
+                    23 September 2023
+                </div>
+
+            </div>
 
             <div class="card eventCard">
                 <div class="card-body">
@@ -65,14 +74,104 @@
                     <p>So why not bring the whole family along and enjoy a day of fun, games, and healthy competition?</p>
 
                     <SharedNextEvent Tag="Sports Afternoon" />
+
+                    <p>
+                        <a href="https://www.facebook.com/events/988935389070994" target="_blank" class="dinkyIcons"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.instagram.com/doddingtoncarnival" target="_blank" class="dinkyIcons"><i class="bi bi-instagram"></i></a>
+                    </p>
                 </div>
             </div>
 
             @* <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 />  *@
 
-           <SportsAfternoonComponent />
+            <SportsAfternoonComponent />
 
-           @*  <SharedRaffleTickets /> *@
+            @*  <SharedRaffleTickets /> *@
+
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <div class="card eventCard">
+                        <div class="card-header">
+                            Free On-Site Parking
+                        </div>
+                        <div class="card-body">
+                            <p>Arriving by car to the Sports Field? We have plenty of free on-site car parking at the rear of the field.</p>
+                        </div>
+                    </div>
+                </div>
+
+               
+            </div>
+
+            <DoddingtonCarnival.Blazor.Shared.Venues.RecreationalFieldComponent />
+
+            <div class="card eventCard">
+                <div class="card-header">
+                    Previous Years Photo Albums
+                </div>
+                <div class="card-body">
+
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <td>Year</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>2023</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.663606172475005" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2022</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.5544622712265912" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2019</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.2469554276439453" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2018</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.1906517842743102" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2017</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.1482285025166388" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2016</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.1111079818953579" target="_blank">Sports Day</a></td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.1111164235611804" target="_blank">Soap Box Races</a></td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.1111081855620042" target="_blank">Races</a></td>
+                            </tr>
+                            <tr>
+                                <td>2015</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.972630759465153" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2014</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.972254902836072" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2013</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.972248909503338" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2012</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.972232979504931" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2011</td>
+                                <td colspan="3"><a href="https://www.facebook.com/media/set/?set=a.972223202839242" target="_blank">All Photos</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
 
             @*<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
