--- a/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
@@ -7,25 +7,40 @@
 <div class="carnivalpage pages paralax carnivalpage-darkblue">
     <div class="container">
 
-        <header>
+@*         <header>
             <h4 class="line-divider">Themes</h4>
             <h1>Carnival Themes</h1>
-        </header>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-1">
 
             <div class="card eventCard">
                 <div class="card-body">
                     <p>We're thrilled to announce the theme for the 2023 Doddington Village Sports & Carnival:</p>
                     <p class="text-centre" style="font-size: 2em !important; font-weight: bolder !important">100 Years of</p>
                     <p class="text-centre"><img src="/images/theme/disney.png" style="width: 100%" alt="The Walt Disney logo." /></p>
-                    
+                </div>
+            </div>
+
+            <div class="row eventBanner">
+                <div class="title">
+                    Carnival Themes
+                </div>
+                <div class="">
+                   @*  23 September 2023 *@
+                </div>
+
+            </div>
+
+            <div class="card eventCard">
+                <div class="card-body">
                     <p>This year, we're celebrating a century of magic, imagination, and pure joy with all things Disney. </p>
                     <p>From classic characters like Mickey and Minnie Mouse to beloved princesses, superheroes, and beyond, there's something for everyone in the wonderful world of Disney. </p>
                     <p>We're calling on all members of the community to join us in embracing this theme and bringing their favorite Disney characters to life. Whether you're young or old, a die-hard fan or a casual admirer, we guarantee you'll have a blast at this year's carnival.</p>
                     <p>So mark your calendars and get ready to let your inner Disney shine!</p>
                 </div>
             </div>
+
 
             <div class="card eventCard">
                 <div class="card-header">
