--- a/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
+++ b/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
@@ -6959,13 +6959,19 @@ z" />
 							</ul>
 						</div>
 						<div class="col-lg-4 col-12 mb-3">
-							<h3>Useful Information</h3>
+							<h3>Follow us</h3>
+							<div class="footerIcons">
+								<a href="https://www.facebook.com/doddingtoncarnivalandsports" target="_blank" class="footerIcon"><i class="bi bi-facebook"></i></a>
+								<a href="https://www.instagram.com/doddingtoncarnival" target="_blank" class="footerIcon"><i class="bi bi-instagram"></i></a>
+							</div>
+
+							@* <h3>Useful Information</h3>
 
 							<ul>
 								<li><a href="scarecrows/enter" class="p-0 text-muted">Enter a Scarecrow</a> </li>
 								<li><a href="carnival/floats/enter" class="p-0 text-muted">Enter a float</a></li>
 								<li><a href="fancydress" class="p-0 text-muted">Enter the fancy dress</a></li>
-							</ul>
+							</ul> *@
 						</div>
 						<div class="col-lg-4 col-12 mb-3">
 							<h3>Contact Details</h3>
