--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunTracker/SantaRunTrackerPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunTracker/SantaRunTrackerPage.razor
@@ -9,12 +9,27 @@
 
     <div class="overlay"></div>
     <div class="container">
-        <header>
-            <h4 class="line-divider" style="color:white;" @onclick="NavigateToParent">Santa Run</h4>
-            <h1>Santa Tracker</h1>
-        </header>
+        @*         <header>
+        <h4 class="line-divider" style="color:white;" @onclick="NavigateToParent">Santa Run</h4>
+        <h1>Santa Tracker</h1>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-1">
+
+            <div class="card eventCard">
+                <div class="card-body">
+                    <iframe style="width:100%;height:50vh;" src="https://track-santa.co.uk/map/i/doddingtoncarnival" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="row eventBanner">
+                <div class="title">
+                    Santa Tracker
+                </div>
+                <div class="">
+                    8- 10 December 2023
+                </div>
+            </div>
 
             <div class="card eventCard">
                 <div class="card-body">
@@ -24,10 +39,7 @@
                         <div class="col">
                             <div style="margin: 0; padding: 0; padding-top: 15px;background-color: white; color: #990000; font-size: x-large;">
                                 <div class="row" style="background-color: white;margin: 0; padding: 0;">
-                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="">
-                                        <iframe style="width:100%;height:50vh;" src="https://track-santa.co.uk/map/i/doddingtoncarnival" frameborder="0" allowfullscreen></iframe>
-                                        <h5 style="text-align: justify; font-size:medium;">Our Santa Tracker will ping everytime the sleigh moves around Doddington, showing you exactly where we are on each evening!</h5>
-                                    </div>
+                                    <h5 style="font-size:medium;">Our Santa Tracker will ping everytime the sleigh moves around Doddington, showing you exactly where we are on each evening!</h5>
                                     <div class="col bold-text" style="text-align: center;">
                                         @*<p style=" font-size:medium;">Coming soon! Watch this space!</p>*@
                                         <p style=" font-size:medium;">No special device or software needed!</p>
