--- a/DoddingtonCarnival.Blazor/Pages/FeatureScarecrows/ScarecrowsPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureScarecrows/ScarecrowsPage.razor
@@ -7,14 +7,24 @@
 <div class="carnivalpage pages paralax carnivalpage-darkblue">
     <div class="overlay"></div>
     <div class="container">
-        <header>
-            <h4 class="line-divider">Scarecrows</h4>
-            <h1>Doddington Scarecrows</h1>
-        </header>
+        @*         <header>
+        <h4 class="line-divider">Scarecrows</h4>
+        <h1>Doddington Scarecrows</h1>
+        </header> *@
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-1">
 
             <div class="row bannerImage scarecrowBanner"></div>
+
+            <div class="row eventBanner">
+                <div class="title">
+                    Doddington Scarecrows
+                </div>
+                <div class="">
+                    28 June to 6 July 2024
+                </div>
+
+            </div>
 
 
             <div class="card eventCard">
@@ -23,7 +33,12 @@
 
                     <p>The children's Sports Afternoon has become a tradition in the village of Doddington. Races for children under the age of 16, with medals and trophies for the winners.</p>
 
-                    <p><SharedNextEvent Tag="Scarecrow" /></p>
+                    <p><SharedNextEvent Tag="scarecrows" /></p>
+
+                    <p>
+                        <a href="https://www.facebook.com/events/286278067515203" target="_blank" class="dinkyIcons"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.instagram.com/doddingtoncarnival" target="_blank" class="dinkyIcons"><i class="bi bi-instagram"></i></a>
+                    </p>
                 </div>
             </div>
 
@@ -46,6 +61,70 @@
                             <a href="/scarecrows/previous" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Previous Entries</a>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="card eventCard">
+                <div class="card-header">
+                    Previous Years Photo Albums
+                </div>
+                <div class="card-body">
+
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <td>Year</td>
+                                <td></td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>2023</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.663585409143748" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2022</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.5544509762277207" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2021</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.4452721301456064" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2020</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.3305211732873699" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2019</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.2471535629574651" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2018</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.1906496962745190" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2017</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.1478603505534540" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2013</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.972248462836716" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2012</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.972232179505011" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2011</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.972222616172634" target="_blank">All Photos</a></td>
+                            </tr>
+                            <tr>
+                                <td>2010</td>
+                                <td><a href="https://www.facebook.com/media/set/?set=a.972036416191254" target="_blank">All Photos</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                 </div>
             </div>
         </div>
