--- a/DoddingtonCarnival.Blazor/Pages/FeatureCalendar/SharedCalendarEntry.razor.css
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureCalendar/SharedCalendarEntry.razor.css
@@ -1,5 +1,5 @@
 ﻿.calendarEvent {
-    margin: 20px 10px 20px 10px;
+    margin: 20px 10px 20px 0px;
     border-bottom: 1px solid white;
 }
 
@@ -42,10 +42,17 @@
                 padding: 0 !important;
             }
 
-
-    .calendarEvent .goButton {
-        margin-top: 10px;
+    .calendarEvent .goButtons {
+        margin-bottom: 20px;
     }
+
+        .calendarEvent .goButtons .goButton {
+            margin-left: 10px;
+        }
+
+            .calendarEvent .goButtons .goButton:first-child {
+                margin-left: 0px;
+            }
 
     .calendarEvent.past {
         color: gray;
