--- a/DoddingtonCarnival.Blazor/Pages/_Layout.cshtml
+++ b/DoddingtonCarnival.Blazor/Pages/_Layout.cshtml
@@ -75,5 +75,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="js/saveFile.js"></script>
 </body>
 </html>
