--- a/DoddingtonCarnival.Blazor/Shared/MainLayout.razor.css
+++ b/DoddingtonCarnival.Blazor/Shared/MainLayout.razor.css
@@ -12,6 +12,17 @@ main {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
+
+.doddingtonTitle {
+    font-size: calc(1.375rem + 1.5vw);
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+
+
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
