--- a/DoddingtonCarnival.Blazor/Pages/HomePage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/HomePage.razor
@@ -19,89 +19,96 @@
         <div class="masonry features">
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/princeandprincess.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_PrinceAndPrincess-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Prince & Princess</h5>
-                        <p class="card-text">The boys and girls of the village get selected and become the Prince and Princess.</p>
-                        <a href="princeandprincess" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Carnival Prince & Princess</h5>
+                        <div class="card-link">
+                            <a href="princeandprincess" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/carnival.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_Carnival-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Carnival</h5>
-                        <p class="card-text">Join us for a fantastic show of carnival floats and parade around the streets of Doddington!</p>
-                        <a href="carnival" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Carnival Floats & Procession</h5>
+                        <div class="card-link">
+                            <a href="carnival" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/sportsday.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_SportsAfternoon-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Sports Afternoon</h5>
-                        <p class="card-text">Races for children of all ages with medals and trophies to win! Also bouncy castles, food and a whole lot more!</p>
-                        <a href="sportsafternoon" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Children's Sports Afternoon</h5>
+                        <div class="card-link">
+                            <a href="sportsafternoon" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/doddingtondisco.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_Discos-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Discos</h5>
-                        <p class="card-text">Remember the days of Doddington Disco? Leave the kids at home and come and have some disco fun!</p>
-                        @*<a href="discos" class="w-100 btn btn-lg btn-primary">Find out more...</a>*@
-                        <button type="button" class="w-100 btn btn-lg btn-primary" disabled="disabled">(Info coming soon!)</button>
+                        <h5 class="card-title">Doddington Discos</h5>
+                        <div class="card-link">
+                            <div class="w-100">Info coming soon!</div>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/santarun.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_SantaRun-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">The Santa Run!</h5>
-                        <p class="card-text">Each Christmas, we bring Santa out to each and every corner of the village to see the children, with music and fun.</p>
-                        <a href="santarun" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Santa Claus is coming to town!</h5>
+                        <div class="card-link">
+                            <a href="santarun" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/scarecrows.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_Scarecrow-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Scarecrows</h5>
-                        <p class="card-text">Every year, theme-based scarecrows are very competitive and lots of fun to find around the village.</p>
-                        <a href="scarecrows" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Scarecrows Competition</h5>
+                        <div class="card-link">
+                            <a href="scarecrows" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/fancydress.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_FancyDress-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Fancy Dress</h5>
-                        <p class="card-text">Fancy Dress is very much encouraged at our events, for young and old, and there are prizes for them too!</p>
-                        <a href="fancydress" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Fancy Dress Competitions</h5>
+                        <div class="card-link">
+                            <a href="fancydress" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="mItem">
                 <div class="card feature">
-                    <img src="images/features/pubquizzes.png" class="card-img-top" alt="...">
+                    <img src="images/Pages/Home/Banner_PubQuiz-min.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Pub Quiz</h5>
-                        <p class="card-text">Come and test your knowledge at our upcoming Pub Quiz Night! Teams of up to 6 people!</p>
-                        <a href="pubquiz" class="w-100 btn btn-lg btn-primary">Find out more...</a>
+                        <h5 class="card-title">Pub Quiz Fundraisers</h5>
+                        <div class="card-link">
+                            <a href="pubquiz" class="w-100">Find out more...</a>
+                        </div>
                     </div>
                 </div>
             </div>
