--- a/DoddingtonCarnival.Blazor/Shared/NavMenu.razor
+++ b/DoddingtonCarnival.Blazor/Shared/NavMenu.razor
@@ -59,6 +59,11 @@
                 <span class="oi oi-media-play" aria-hidden="true"></span> Donations
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="faq">
+                <span class="oi oi-media-play" aria-hidden="true"></span> FAQs
+            </NavLink>
+        </div>
     </nav>
 </div>
 
